--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,15 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        
-        {
-            "name": "Dart & Flutter",
+        "version": "0.2.0",
+        "configurations": [
+          {
+            "name": "Dart",
             "request": "launch",
-            "type": "dart"
-        }
-    ]
-}
+            "type": "dart",
+            "program": "Dart/hello_world.dart",
+            "cwd": "${workspaceFolder}/Documents/Maksym"
+          }
+        ]
+      }
+      
